<resources>
    <string name="app_name">Playlist maker</string>
    <string name="search">Поиск</string>
    <string name="media">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="dark_theme">Темная тема</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="write_to_support">Написать в поддержку</string>
    <string name="user_agreement">Пользовательской соглашение</string>
    <string name="mailto" translatable="false">mailto:</string>
    <string name="dev_email" translatable="false">bukholov.dmitry@gmail.com</string>
    <string name="subject_email" translatable="false">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="message_email" translatable="false">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="uri_user_agreement" translatable="false">https://yandex.ru/legal/practicum_offer/</string>
    <string name="uri_practicum_android_developer" translatable="false">https://practicum.yandex.ru/android-developer/</string>
    <string name="share_app_text_plain" translatable="false">text/plain</string>
    <string name="not_found">Ничего не нашлось</string>
    <string name="no_internet">Проблемы со связью \n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="internet_retry">Обновить</string>
    <string name="clear_history">Очистить историю</string>
    <string name="looking_for">Вы искали</string>
    <string name="country">Страна</string>
    <string name="genre">Жанр</string>
    <string name="year">Год</string>
    <string name="collection">Альбом</string>
    <string name="duration">Длительность</string>
    <string name="audio_player_start_position" translatable="false">00:00</string>
    <string name="media_empty">Ваша медиатека пуста</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="playlists">Мои</string>
    <string name="favorite_tracks">Любимые</string>
    <string name="playlists_not_created">Вы не создали\n ни одного плейлиста</string>
    <string name="agreement">Соглашение</string>
    <string name="name">Название*</string>
    <string name="create">Создать</string>
    <string name="description">Описание</string>
    <string name="finish_creating_playlist">Завершить создание плейлиста?</string>
    <string name="unsaved_data_will_be_lost">Все несохраненные данные будут потеряны</string>
    <string name="finish">Завершить</string>
    <string name="cancel">Отмена</string>
    <string name="playlist_created">Плейлист %s создан</string>
    <string name="adding_to_playlist">Добавить в плейлист</string>
    <string name="track_already_added_to_playlist">Трек уже добавлен в плейлист [%s]</string>
    <string name="added_to_playlist">Добавлено в плейлист [%s]</string>
    <plurals name="count_of_track_numbers">
        <item quantity="one">%d трек</item>
        <item quantity="few">%d трека</item>
        <item quantity="other">%d треков</item>
    </plurals>
    <plurals name="count_of_minutes">
        <item quantity="one">%d минута</item>
        <item quantity="few">%d минуты</item>
        <item quantity="other">%d минут</item>
    </plurals>
    <string name="want_delete">Хотите удалить трек?</string>
    <string name="yes">ДА</string>
    <string name="no">НЕТ</string>
    <string name="playlist_share_message">В этом плейлисте нет списка треков, которым можно поделиться.</string>
    <string name="share">Поделиться</string>
    <string name="delete_playlist">Удалить плейлист</string>
    <string name="edit_playlist">Редактировать информацию</string>
    <string name="want_delete_playlist">Хотите удалить плейлист «%s»?</string>
    <string name="edit">Редактировать</string>
    <string name="save">Сохранить</string>
    <string name="playlist_empty">В плейлисте нет треков</string>
</resources>