<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/colorSecondary"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title_settings"
            style="@style/TitleActivityStyle"
            android:backgroundTint="?attr/colorSecondary"
            android:text="@string/settings" />

        <androidx.appcompat.widget.SwitchCompat style="@style/SettingsMenuStyle"
            android:id="@+id/switch_dark_theme"
            app:thumbTint="?attr/colorSwitchThumbNormal"
            app:trackTint="?attr/colorSurface"
            android:paddingEnd="@dimen/settings_switch_end_padding"
            android:text="@string/dark_theme" />

        <TextView style="@style/SettingsMenuStyle"
            android:id="@+id/text_view_share"
            android:drawableEnd="@drawable/share"
            android:text="@string/share_app" />

        <TextView style="@style/SettingsMenuStyle"
            android:id="@+id/text_view_send_to_support"
            android:drawableEnd="@drawable/support"
            android:text="@string/write_to_support" />

        <TextView style="@style/SettingsMenuStyle"
            android:id="@+id/text_view_user_agreement"
            android:drawableEnd="@drawable/arrow_forward"
            android:text="@string/user_agreement" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>