<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/settings_background_color"
        android:orientation="vertical">

        <Button
            android:id="@+id/buttonBackFromSettings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/title_label_margin"
            android:layout_marginStart="@dimen/title_label_margin"
            android:layout_marginBottom="@dimen/title_label_margin_bottom"
            android:backgroundTint="@color/settings_background_color"
            android:padding="@dimen/title_label_padding"
            android:text="@string/settings"
            android:textAlignment="textStart"
            android:textColor="@color/YP_font_color"
            android:textSize="@dimen/settings_title_font_size"
            app:icon="@drawable/arrow_back"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/settings_title_icon_padding"
            app:iconTint="@color/icon_button_black_color" />

        <Switch
            android:id="@+id/switchDarkTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="@dimen/settings_element_padding"
            android:paddingStart="@dimen/settings_element_padding"
            android:paddingEnd="@dimen/settings_switch_end_padding"
            android:text="@string/dark_theme"
            android:textColor="@color/YP_font_color"
            android:textSize="@dimen/settings_activity_font_size" />

        <TextView
            android:id="@+id/textViewShare"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/share"
            android:paddingVertical="@dimen/settings_element_padding"
            android:paddingStart="@dimen/settings_start_padding"
            android:paddingEnd="@dimen/settings_icon_end_padding"
            android:text="@string/share_app"
            android:textColor="@color/YP_font_color"
            android:textSize="@dimen/settings_activity_font_size" />

        <TextView
            android:id="@+id/textViewSendToSupport"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/support"
            android:paddingVertical="@dimen/settings_element_padding"
            android:paddingStart="@dimen/settings_start_padding"
            android:paddingEnd="@dimen/settings_icon_end_padding"
            android:text="@string/write_to_support"
            android:textColor="@color/YP_font_color"
            android:textSize="@dimen/settings_activity_font_size" />

        <TextView
            android:id="@+id/textViewUserAgreement"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/arrow_forward"
            android:paddingVertical="@dimen/settings_element_padding"
            android:paddingStart="@dimen/settings_start_padding"
            android:paddingEnd="@dimen/settings_icon_end_padding"
            android:text="@string/user_agreement"
            android:textColor="@color/YP_font_color"
            android:textSize="@dimen/settings_activity_font_size" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>