<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSecondary"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".media.ui.PlaylistCreateFragment">

    <TextView style="@style/TitleActivityStyle"
        android:id="@+id/button_back"
        android:text="@string/new_playlist"
        android:drawableStart="@drawable/arrow_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:id="@+id/view_add_image"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/playlist_create_image_view_margin"
        android:layout_marginTop="@dimen/playlist_create_image_view_margin"
        android:background="@drawable/add_image_drawable"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_back"
        android:scaleType="centerCrop"/>

    <com.google.android.material.textfield.TextInputLayout style="@style/PlaylistCreateEditText"
        android:id="@+id/edit_text_playlist_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/playlist_create_body_margin"
        android:layout_marginHorizontal="@dimen/playlist_create_body_margin"
        android:hint="@string/name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view_add_image">

        <com.google.android.material.textfield.TextInputEditText style="@style/PlaylistCreateEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout style="@style/PlaylistCreateEditText"
        android:id="@+id/edit_text_playlist_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/playlist_create_body_margin"
        android:layout_marginHorizontal="@dimen/playlist_create_body_margin"
        android:hint="@string/description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_text_playlist_name">

        <com.google.android.material.textfield.TextInputEditText style="@style/PlaylistCreateEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton style="@style/PlaylistCreateButton"
        android:id="@+id/button_create_playlist"
        app:cornerRadius="@dimen/playlist_create_button_create_round_corners"
        android:enabled="false"
        android:text="@string/create"
        android:layout_marginBottom="@dimen/playlist_create_image_view_margin"
        android:layout_marginHorizontal="@dimen/playlist_create_body_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>