<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background_color"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="@dimen/main_activity_font_size"
            android:padding="@dimen/title_label_padding"
            android:paddingStart="@dimen/main_layout_padding"

            android:layout_marginTop="@dimen/title_label_margin"
            android:layout_marginStart="@dimen/title_label_margin"
            android:layout_marginBottom="@dimen/title_label_margin_bottom"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingHorizontal="@dimen/main_layout_padding"
            android:layout_marginBottom="@dimen/main_layout_bottom"
         >
            <Button
                android:id="@+id/buttonSearch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginBottom="@dimen/main_layout_margin_between_button"
                android:text="@string/search"
                android:textSize="@dimen/main_activity_font_size"
                android:textColor="@color/YP_font_color"
                android:backgroundTint="@color/main_button_color"
                app:icon="@drawable/search"
                app:iconGravity="textStart"
                app:iconPadding="@dimen/main_icon_padding"
                app:iconTint="@color/icon_button_black_color"
                app:cornerRadius="@dimen/main_button_corner_radius"
                />

            <Button
                android:id="@+id/buttonMedia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/media"
                android:textSize="@dimen/main_activity_font_size"
                android:textColor="@color/YP_font_color"
                android:backgroundTint="@color/main_button_color"
                android:textAllCaps="false"
                app:icon="@drawable/media"
                app:iconGravity="textStart"
                app:iconPadding="@dimen/main_icon_padding"
                app:iconTint="@color/icon_button_black_color"
                android:layout_marginBottom="@dimen/main_layout_margin_between_button"
                app:cornerRadius="@dimen/main_button_corner_radius" />

            <Button
                android:id="@+id/buttonSettings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/settings"
                android:textSize="@dimen/main_activity_font_size"
                android:textColor="@color/YP_font_color"
                android:backgroundTint="@color/main_button_color"
                app:icon="@drawable/settings"
                app:iconGravity="textStart"
                app:iconPadding="@dimen/main_icon_padding"
                app:iconTint="@color/icon_button_black_color"
                app:cornerRadius="@dimen/main_button_corner_radius"
                android:layout_marginBottom="@dimen/main_layout_margin_between_button"/>
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>